@@ -3,6 +3,10 @@
   Linux/glibc again, although mremap() is not available then. It is therefore
   recommended to use CPPFLAGS=-D_GNU_SOURCE with Linux/glibc. (Bugreports by
   Stephen Isard, Laurens Blankers, Bob Tennent.)
+* When an editor is invoked using ~e, ~v, 'edit', or 'visual', interrupts are
+  no longer ignored in its process. With most editor implementations, this
+  does not make any difference since they enable interrupts themselves again;
+  however, traditional implementations of 'ed' do not.
 * Since many versions of Linux do not correctly update the modification time
   of a file with mmap(), utime() is now called to force an update when the
   junk mail database is changed.
